# semantic-feature-clustering

./: .gitignore  LICENSE  README.md
cppsrc/: CMakeLists.txt
cppsrc/dlc/: dlclass.cpp  dlclass.hpp
cppsrc/functionReimplement/: CMakeLists.txt  Function.cpp  Function.h  GDATU  GDATX  Interval.cpp  Interval.h  NormalizedPolynom.cpp  NormalizedPolynom.h  PiecewiseFunction.cpp  PiecewiseFunction.h  Polynom.cpp  Polynom.h  SingleVariableFunction.cpp  SingleVariableFunction.h  TrajectoryReader.cpp  TrajectoryReader.h  functionLibSerialization.cpp  functionLibSerialization.h  legacy_unserialization.h  main.cpp  piecewisefunctiondata.h  trajectorycreation.cpp  trajectorycreation.h
cppsrc/math/: CMakeLists.txt  EigenPlus.cpp  EigenPlus.h  binominalUtils.h  definitions.h  matrixOperations.cpp  matrixOperations.h  utils.h
cppsrc/matlab_interface/: CMakeLists.txt  MFun.cpp  MFun.h  SingleVariableMFun.cpp  SingleVariableMFun.h  class_handle.hpp  getFunctionArguments.cpp  map_interface_mex.cpp  mex_directives.h  mex_helper.h  mex_univFun_handling.h  problem_interface_mex.cpp  svrspell_mex.cpp  universalFunction_legacyReader.cpp  universalFunction_mex.cpp
cppsrc/models/: CMakeLists.txt  modelloader.h  optimalcontrolproblem.cpp  optimalcontrolproblem.h
cppsrc/models/furutapendulum/: CMakeLists.txt  _constraints.h  _definition.h  _dynamics.h  _objective.h  definition_header.h  derivativecreation.cpp  furutapendulumproblem.cpp  furutapendulumproblem.h
cppsrc/models/furutapendulum_skew/: CMakeLists.txt  _definition.h  _dynamics.h  _objective.h  derivativecreation.cpp  furutapendulum_skewproblem.cpp  furutapendulum_skewproblem.h
cppsrc/models/furutapendulum_smooth/: CMakeLists.txt  _constraints.h  _definition.h  _dynamics.h  _objective.h  derivativecreation.cpp  furutapendulum_smoothproblem.cpp  furutapendulum_smoothproblem.h
cppsrc/models/manutec/: CMakeLists.txt  _constraints.h  _definition.h  _dynamics.h  _objective.h  definition_functions.h  derivativecreation.cpp  manutecproblem.cpp  manutecproblem.h
cppsrc/serialization/: eigen_dense_serialization.h  eigen_sparse_serialization.h  lwpr_serialization.h  serialization_helper.h
cppsrc/util/: CMakeLists.txt  argumentparser.cpp  argumentparser.h  eigensparseutils.cpp  eigensparseutils.h  elzinga_grid.cpp  elzinga_grid.h  elzingatest.cpp  exceptions.h  mlinterp.hpp  onCleanup.h  quicktest.cpp  uncopyable.h
matlabsrc/: init.m  install.m  start_matlab.sh
matlabsrc/fb_distance/: TC_Changepoints.m  TC_Empty.m  TC_Extrema.m  TC_ExtremaAndLimits.m  TC_Limits.m  TC_Roots.m  TrajCharTable.m  TrajectoryCharacteristic.m  plotTrajectoryCharacteristics.m  svrSpellOnTables.m  svrspell.m
matlabsrc/fb_distance/helper/: computeProminence.m  findChangepointsInTimeSeries.m  findExtremaInCubic.m  findExtremaInLinear.m  findLimitsInCubic.m  findLimitsInLinear.m  findLimits_helper.m  findRootsInCubic.m  findRootsInLinear.m  mergeTimetables.m  piecewiseLinearFit.m
matlabsrc/interface/: TrajectoryCollector_FilterWriter.m  default_statecontrolfilter.m  dircol_interface.m  make.m  problem_interface.m  string_map.m  universalFunction.m
matlabsrc/scripts/: clustering_evaluation_times.m  clustering_furuta.m  clustering_humanMotion_dataset.m  clustering_manutec.m  prepare_evaluation_times.m
matlabsrc/util/: applyPermutation.m  clusterOcpSolutions.m  clusterOcpSolutions_measureTime.m  createDir.m  evaluateClustering.m  findConsecutiveIntegers.m  firstNonempty.m  getParetoFrontInMatrix.m  isOctave.m  locallyDisableWarning.m  logical2str.m  nearestNeighbor.m  permutationAdjSwapDistance.m  plotTrajectoryData.m  pycolors.m  selectIndex.m  useSGolayFilter.m
matlabsrc/util/convenience/: EMPTY_DEFAULT_ARGUMENT.m  colvec.m  cropLastIndex.m  cstrcat.m  ifelse.m  listdir.m  map.m  map2.m  map_recursive.m  mat2cells.m  normColumn.m  rowvec.m  secondOutValue.m  sortBackIndices.m  vec2str.m
matlabsrc/util/piecewiseFunction/: createCubicInterpolation.m  createPiecewiseLinear.m  evaluateDerivative.m
matlabsrc/util/plotting/: colorcodeXLabel.m  correctDendrogramColoring.m  makeDendrogramLogarithmic.m  plotDendrogram.m  plotPeakAndRootMarker.m
matlabsrc/util/trajectory/: buildStateFilter.m  findPtOnTraj.m  sortTrajectories.m
